[project]
name = "ai-agent"
version = "0.1.0"
description = "AI Agent Review Engine feature for PaperReviewFastTrackEdu"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "langchain>=1.2.15",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.6",
    "langsmith>=0.7.30",
    "pydantic-settings>=2.13.1",
    "pymupdf4llm>=1.27.2.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "tavily-python>=0.7.23",
    "uvicorn[standard]>=0.44.0",
]
